# CHSUScheduleAPI

./: .gitignore  .readthedocs.yml  LICENSE  README.md  doc_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: code_check.yml
chsu_api/: constants.py
chsu_api/api/: abc.py  api.py
chsu_api/client/: abc.py  aiohttp.py
chsu_api/models/: auditorium.py  base.py  building.py  department.py  discipline.py  teacher.py  timetable.py
chsu_schedule_api/: __init__.py  enums.py  errors.py  sync.py
chsu_schedule_api/api/: __init__.py  abc.py  api.py
chsu_schedule_api/client/: __init__.py  abc.py  aiohttp.py
chsu_schedule_api/models/: __init__.py  auditorium.py  building.py  student_group.py  teacher.py  timetable.py
chsu_schedule_api/types/: __init__.py  auditorium.py  base.py  building.py  department.py  discipline.py  student_group.py  teacher.py  timetable.py
docs/: api.rst  client.rst  conf.py  errors.rst  index.rst  install.rst  types.rst
docs/_static/: extra.css  theme_modes.js
examples/: async_usage.py  sync_usage.py
