[tool.poetry]
name = "chsu_schedule_api"
version = "1.2.2"
description = "Asynchronous API wrapper for CHSU schedule API"
authors = ["VoVcHiC <hello@chsutech.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vovchic17/CHSUScheduleAPI"
repository = "https://github.com/vovchic17/CHSUScheduleAPI"
keywords = ["chsu", "schedule", "api"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "ANN101",
    "ANN102",
    "ANN002",
    "ANN003",
    "D100",
    "D104",
    "D106",
    "D107",
    "D203",
    "D205",
    "D212",
    "D415",
    "COM812",
    "RUF001",
    "RUF002",
    "RUF003",
    "PLR0913",
    "PLR2004",
    "PD011",
    "S101",
]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"

[[tool.mypy.overrides]]
module = "*.*"
disable_error_code = [
    "call-arg",
    "import-not-found",
    "import-untyped",
    "union-attr",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
