[tool.poetry]
name = "chsu_schedule_api"
version = "1.2.2"
description = "Asynchronous API wrapper for CHSU schedule API"
authors = ["VoVcHiC <hello@chsutech.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vovchic17/CHSUScheduleAPI"
repository = "https://github.com/vovchic17/CHSUScheduleAPI"
keywords = ["chsu", "schedule", "api"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
mypy = "^1.9.0"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "D100",   # undocumented-public-module
    "D104",   # undocumented-public-package
    "D106",   # undocumented-public-nested-class
    "D107",   # undocumented-public-init
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "COM812", # missing-trailing-comma
]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ALL"]
"examples/*" = ["ALL"]
"conf.py" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"

[[tool.mypy.overrides]]
module = "*.*"
disable_error_code = [
    "call-arg",
    "import-not-found",
    "import-untyped",
    "union-attr",
]

[tool.mypy]
exclude = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
